# polychrome

./: .gitignore  .gitmodules  LICENSE  README.md  polychrome.tosc
analyzer/: .clang-format  .gitignore  CMakeLists.txt
analyzer/src/: analyzer.h  main.cpp
beak/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  doxyfile  format  tidy
beak/deploy/: Makefile  beak.service  hosts  playbook.yml  requirements.yml
beak/src/: app.cpp  app.h  engine.cpp  engine.h  error.h  filter.cpp  filter.h  main.cpp  oscillator.cpp  oscillator.h  processor.cpp  processor.h  resource.cpp  resource.h  server.cpp  server.h  simEngine.cpp  simEngine.h  synthProcessor.cpp  synthProcessor.h  synthSound.h  synthVoice.cpp  synthVoice.h
beak/test/: .gitignore  go.mod  go.sum  main.go
beak/test/cmd/: playMessage.go  schema.pb.go  send.go
beak/test/scripts/: test-async-playback.sh  test-ten-channels.sh
blinkenleds/: Makefile  README.md  platformio.ini  todo.md
blinkenleds/lib/ProtoBuf/: schema.pb.cpp  schema.pb.h
blinkenleds/src/: Display.cpp  Display.h  Ethernet.cpp  Ethernet.h  Network.cpp  Network.h  Pixel.cpp  Pixel.h  Pixel_calibrations.h  main.cpp
calibration/: .gitignore  README.md  convert.exs
color_palettes/: cherrymelon.hex  flamingo-gb.hex  lava-gb.hex  red-blood-pain.hex  velvet-cherry-gb.hex
joystick/: Makefile  mix.exs
joystick/config/: config.exs  target.exs
joystick/lib/: joystick.ex
joystick/lib/joystick/: application.ex  event_handler.ex  light_control.ex  monitor.ex  protobuf.ex  udp.ex
joystick/lib/joystick/protobuf/: schema.pb.ex
joystick/priv/authorized_keys/: luka.pub  reimerei.pub
joystick/rel/: vm.args.eex
joystick/rootfs_overlay/etc/: iex.exs
joystick/test/: joystick_test.exs
mixer/: .gitignore  Makefile  README.md  mix.exs
mixer/lib/: mixer.ex
mixer/lib/mixer/: application.ex  broadcaster.ex  generator.ex  protobuf.ex  selector.ex
mixer/lib/mixer/protobuf/: schema.pb.ex
node-sources/: README.md  convert-proto.js  package-lock.json  package.json  packet.js  palettes.js  render.js  scan-image.js  server.js  virtual-screen.js
octopus/: .dockerignore  .formatter.exs  .gitignore  .iex.exs  .tool-versions  Dockerfile  Makefile  README.md  fly.toml  mix.exs
octopus/assets/: package-lock.json  package.json
octopus/assets/css/: app.css
octopus/assets/js/: app.js
octopus/assets/js/hooks/: index.js  pixels.ts  pixels3d.ts
octopus/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
octopus/lib/: input_adapter.ex  octopus.ex  octopus_web.ex
octopus/lib/mix/tasks/: params.ex
octopus/lib/octopus/: animator.ex  app.ex  app_supervisor.ex  application.ex  broadcaster.ex  button_state.ex  canvas.ex  color_palette.ex  color_palettes.ex  event_scheduler.ex  font.ex  font_tester.ex  game_scheduler.ex  generator.ex  image.ex  input_adapter.ex  installation.ex  joy_state.ex  layout.ex  mailer.ex  mixer.ex  open_ai.ex  params.ex  playlist_scheduler.ex  presence.ex  protobuf.ex  release.ex  repo.ex  scheduler.ex  selector.ex  sprite.ex  sprite_tester.ex  story.ex  telegram_bot.ex  transitions.ex  udp_server.ex  util.ex  webp.ex
octopus/lib/octopus/apps/: animator_test.ex  beak_interactive.ex  beak_test.ex  blocks.ex  bomber_person.ex  calibrator.ex  canvas_test.ex  doom_fire.ex  encounter.ex  fairy_dust.ex  flipdot.ex  font_tester.ex  hogg.ex  input_debug.ex  input_tester.ex  lemmings.ex  mario_run.ex  matrix.ex  midi.ex  odd_man_out.ex  palette_tester.ex  photo.ex  pixel_fun.ex  rickroll.ex  round_robin_scheduler.ex  sample_app.ex  senso.ex  snake.ex  space-invader.ex  space_invaders.ex  sprites.ex  sprites_grouped.ex  sprites_random.ex  sprites_tester.ex  starfield.ex  static_image.ex  storyteller.ex  supermario.ex  text.ex  tla.ex  (+4 more)
octopus/lib/octopus/font/: blinkenlights.ex  blinkenlights_bold.ex  blinkenlights_regular.ex
octopus/lib/octopus/installation/: nation.ex
octopus/lib/octopus/layout/: mildenberg.ex  mildenberg_narrow.ex  mildenberg_zoom1.ex  mildenberg_zoom2.ex  nation.ex
octopus/lib/octopus/osc/: server.ex
octopus/lib/octopus/params/: global.ex
octopus/lib/octopus/playlist_scheduler/: playlist.ex
octopus/lib/octopus/protobuf/: json.ex  schema.pb.ex
octopus/lib/octopus/scheduler/: entry.ex
octopus/lib/octopus_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
octopus/lib/octopus_web/components/: app_config_component.ex  core_components.ex  layouts.ex  (+1 more)
octopus/native/octopus_webp/: Cargo.toml  README.md
octopus/priv/: .gitignore
octopus/priv/color_palettes/: amber-crtgb.hex  chocolate.hex  dustbyte.hex  fuzzyfour.hex  kirokaze-gameboy.hex  nymph-gb.hex  rgb.hex  slso8.hex
octopus/priv/midi/: encounter.json
octopus/priv/repo/: seeds.exs
octopus/priv/stories/: baumhumor.txt  nog24.txt
octopus/priv/words/: 500-10-letter-words.txt  nog24-256-10--letter-words.txt  nog24-german-10--letter-words.txt  words.txt
octopus/src/: program_lexer.xrl  program_parser.yrl
octopus/test/: test_helper.exs
octopus/test/support/: conn_case.ex  data_case.ex
protobuf/: nanopb.proto  protoc-gen-elixir  schema.proto
sim/: .gitignore  README.md  mix.exs
sim/assets/: tailwind.config.js
sim/assets/js/: app.js
sim/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
sim/lib/: sim.ex  sim_web.ex
sim/lib/sim/: application.ex  generator.ex  layout.ex  mailer.ex  pixels.ex  repo.ex  udp_server.ex
sim/lib/sim_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
sim/priv/repo/: seeds.exs
sim/test/: test_helper.exs
sim/test/support/: conn_case.ex  data_case.ex
sonartacle/: .clang-format  CMakeLists.txt  README.md
sonartacle/src/: app.cpp  app.h  engine.cpp  engine.h  error.h  processor.cpp  processor.h  proto.h  resource.cpp  resource.h  server.cpp  server.h
sonartacle/test/: main.go  test-async-playback.sh
sonartacle/test/scripts/: test-ten-channels.sh
sonartacle/test/sonatacle-proto-sim/: generate_proto.sh  go.sum  test_ten_channels.sh
sonartacle/test/sonatacle-proto-sim/cmd/: cacheMessage.go  nanopb.pb.go  playMessage.go  root.go  schema.pb.go  send.go
(+64 files in other folders)
